[project]
name = "atcoder-solutions"
version = "0.1.0"
description = "AtCoder my solutions"
dependencies = [
    "sortedcontainers>=2.4.0",
    "shapely>=2.0.6",
    "ac-library-python>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atcoder_solutions"]
